--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "uuid": "^9.0.0"
   }
 }
